<resources>
    <string name="app_name">Guia LOL</string>
    <string name="jugar">Acceder</string>
    <string name="tutorial">Como usar</string>
    <string name="salir">Salir</string>
    <string name="title_activity_builds">Builds</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="anyadir">Añadir</string>


    <string name="nombre">Nombre de la build</string>
    <string name="campeon">Campeon</string>
    <string name="descripcion">Descripcion</string>
    <string name="objeto1">Objeto 1</string>
    <string name="objeto2">Objeto 2</string>
    <string name="objeto3">Objeto 3</string>
    <string name="objeto4">Objeto 4</string>
    <string name="objeto5">Objeto 5</string>
    <string name="objeto6">Objeto 6</string>

    <string name="boton1">Registrar</string>
    <string name="boton2">Modificar</string>
    <string name="boton3">Eliminar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>