<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#110321"
    tools:context=".CreateBuilds">

    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="173dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:textColorHint="#F8F7F7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_campeon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="173dp"
        android:ems="10"
        android:hint="@string/campeon"
        android:inputType="textPersonName"
        android:textColorHint="#F8F7F7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre" />

    <EditText
        android:id="@+id/txt_descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="173dp"
        android:ems="10"
        android:hint="@string/descripcion"
        android:inputType="textPersonName"
        android:textColorHint="#F8F7F7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_campeon" />

    <EditText
        android:id="@+id/txt_objeto1"
        android:layout_width="157dp"
        android:layout_height="41dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="173dp"
        android:ems="10"
        android:hint="@string/objeto1"
        android:inputType="textPersonName"
        android:textColorHint="#F8F7F7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.035"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_descripcion" />

    <EditText
        android:id="@+id/txt_objeto2"
        android:layout_width="157dp"
        android:layout_height="41dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/objeto2"
        android:inputType="textPersonName"
        android:textColorHint="#F8F7F7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_objeto1" />

    <EditText
        android:id="@+id/txt_objeto3"
        android:layout_width="157dp"
        android:layout_height="41dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/objeto3"
        android:inputType="textPersonName"
        android:textColorHint="#F8F7F7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_objeto2" />

    <EditText
        android:id="@+id/txt_objeto4"
        android:layout_width="157dp"
        android:layout_height="41dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:hint="@string/objeto4"
        android:inputType="textPersonName"
        android:textColorHint="#F8F7F7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_descripcion" />

    <EditText
        android:id="@+id/txt_objeto5"
        android:layout_width="157dp"
        android:layout_height="41dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:hint="@string/objeto5"
        android:inputType="textPersonName"
        android:textColorHint="#F8F7F7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_objeto4" />

    <EditText
        android:id="@+id/txt_objeto6"
        android:layout_width="157dp"
        android:layout_height="41dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:hint="@string/objeto6"
        android:inputType="textPersonName"
        android:textColorHint="#F8F7F7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_objeto5" />

    <Button
        android:id="@+id/button8"
        android:layout_width="157dp"
        android:layout_height="41dp"
        android:layout_marginTop="564dp"
        android:layout_marginEnd="136dp"
        android:background="@drawable/bordes_redondos"
        android:onClick="Registrar"
        android:text="@string/boton1"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>